src/objects/Field_Map_Value__c.object
<CustomObject>
    <fields>
        <fullName>Field_Map__c</fullName>
        <label>Field Map</label>
        <referenceTo>Field_Map__c</referenceTo>
        <relationshipLabel>Field Map Values</relationshipLabel>
        <relationshipName>Field_Map_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SObject_Type__c</fullName>
        <label>SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Map_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Map Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FMV-{00000}</displayFormat>
        <label>Field Map Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Map Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>